<resources>
    <string name="app_name">ToDo App C40 GSunWed</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="todo_list">Todo List</string>
    <string name="add_new_task">Add new Task</string>
    <string name="enter_task_title">Enter task title ...</string>
    <string name="enter_task_desc">Enter Task Description...</string>
    <string name="select_date_of_task">Select Date Of Task</string>
    <string name="select_time_of_task">Select Task Time</string>
    <string name="add">Add</string>
    <string name="required">Required</string>
    <string name="select_time_because_it_s_required">Select Time because it\'s Required</string>
    <string name="select_date_because_it_s_required">Select Date because it\'s required</string>
    <string name="save_changes">save changes</string>
</resources>